styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: comic sans ms;
}

h1 {
  color: orange;
  text-align: center;
  background-color: red;
  padding: 20px;
}

.pomodoro {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 50px;
  background-color: grey;
  padding: 20px;
  border-radius: 10px;
  justify-content: center;
  width: auto;
  justify-self: center;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  max-width: 700px;
}

.themeToggle {
  position: absolute;
  margin: auto;
  top: 20px;
  right: 20px;
  background: none;
  border: none;
  cursor: pointer;
}

.themeToggle img {
  width: 40px;
  height: 40px;
}

#display {
  font-size: 48px;
  margin: 20px 0;
}
.control {
  display: flex;
  justify-content: center;
  margin-top: 20px;
  flex-wrap: wrap;
  flex-basis: 0 1 21%;
}

.control button {
  padding: 10px 20px;
  margin: 0 10px;
  font-size: 16px;
  cursor: pointer;
  border-radius: 5px;
}

.duration-control {
  display: flex;
  justify-content: center;
  margin-top: 20px;
  flex-wrap: wrap;
}

.duration-control button {
  margin: 5px;
  padding: 10px 15px;
  font-size: 12px;
  cursor: pointer;
  border-radius: 5px;
}

.dark-mode h1 {
  background-color: #1e1e1e;
  color: grey;
}

.dark-mode {
  background-color: #121212;
  color: grey;
}
.dark-mode .pomodoro {
  background-color: #1e1e1e;
}

.dark-mode .control button {
  background-color: #333333;
  color: #ffffff;
}

